--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
     <script src="%PUBLIC_URL%/bootstrap.min.js"></script>
-    <title>React App</title>
+    <title>雾雨小镇 - 鲜血盟约</title>
   </head>
   <body>
     <noscript>
