--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
     <script src="%PUBLIC_URL%/bootstrap.min.js"></script>
-    <title>้พ้จๅฐ้• - ้ฒ่ก€็็บฆ</title>
+    <title>ฮํำ๊ะกี๒ - ฯสัชรหิผ</title>
   </head>
   <body>
     <noscript>
